--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@nuxt/test-utils": "^3.19.2",
+    "@vite-pwa/nuxt": "^1.0.4",
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^18.0.1",
     "playwright-core": "^1.55.0",
