--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,37 +18,19 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-          run_install: false
-
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - name: Setup pnpm cache
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+          cache: 'npm'
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: npm ci
 
       - name: Run linting
-        run: pnpm run lint
+        run: npm run lint
 
       - name: Run unit tests
-        run: pnpm run test:unit:run
+        run: npm run test:unit:run
 
       - name: Build production bundle
-        run: pnpm run build
+        run: npm run build
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
@@ -58,10 +40,10 @@ jobs:
           retention-days: 7
 
       - name: Install Playwright browsers
-        run: pnpm exec playwright install chromium
+        run: npx playwright install chromium
 
       - name: Run E2E tests
-        run: pnpm run test:e2e
+        run: npm run test:e2e
 
       - name: Upload E2E test results
         uses: actions/upload-artifact@v4
@@ -73,8 +55,8 @@ jobs:
 
       - name: Run Lighthouse CI
         run: |
-          pnpm run build
-          pnpm exec lhci autorun
+          npm run build
+          npx lhci autorun
 
       - name: Upload Lighthouse results
         uses: actions/upload-artifact@v4
