--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lint": "eslint . --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "lighthouse": "lhci autorun"
+    "lighthouse": "lhci autorun",
+    "test:ci": "node scripts/test-ci.js",
+    "test:ci:fast": "node scripts/test-ci.js --skip-e2e --skip-lighthouse"
   },
   "dependencies": {
     "vue": "^3.5.13",
