--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "test:unit": "vitest",
-    "test:unit:run": "vitest run",
-    "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui",
-    "lint": "eslint . --fix",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "lighthouse": "lhci autorun",
+    "test:unit": "npx vitest",
+    "test:unit:run": "npx vitest run",
+    "test:e2e": "npx playwright test",
+    "test:e2e:ui": "npx playwright test --ui",
+    "lint": "npx eslint . --fix",
+    "format": "npx prettier --write .",
+    "format:check": "npx prettier --check .",
+    "lighthouse": "npx lhci autorun",
     "test:ci": "node scripts/test-ci.js",
     "test:ci:fast": "node scripts/test-ci.js --skip-e2e --skip-lighthouse"
   },
@@ -23,27 +23,27 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.35.0",
+    "@lhci/cli": "^0.14.0",
     "@playwright/test": "^1.49.1",
     "@rushstack/eslint-patch": "^1.10.4",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.10.5",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@eslint/js": "^9.16.0",
     "@typescript-eslint/eslint-plugin": "^8.19.0",
     "@typescript-eslint/parser": "^8.19.0",
-    "vue-eslint-parser": "^9.4.3",
+    "@vitejs/plugin-vue": "^5.2.1",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.16.0",
     "eslint-plugin-vue": "^9.31.0",
     "jsdom": "^25.0.1",
     "lighthouse": "^12.2.1",
-    "@lhci/cli": "^0.14.0",
     "prettier": "^3.4.2",
     "typescript": "^5.7.2",
     "vite": "^6.0.3",
     "vite-plugin-pwa": "^0.21.1",
     "vitest": "^2.1.8",
+    "vue-eslint-parser": "^9.4.3",
     "vue-tsc": "^2.2.0",
     "workbox-window": "^7.3.0"
   },
