--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jsdom": "^25.0.1",
     "lighthouse": "^12.2.1",
     "prettier": "^3.4.2",
+    "puppeteer": "^24.21.0",
     "typescript": "^5.7.2",
     "vite": "^6.0.3",
     "vite-plugin-pwa": "^0.21.1",
