--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "type-fix": "npx vue-tsc --noEmit"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.57.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
