Composants créés aujourd'hui: Atomes (2 nouveaux): Badge.vue - 89 lignes - Badges Material Design A-E Toggle.vue - 75 lignes - Bouton toggle/collapse Molécules (3 nouvelles): GenderFilterChips.vue - 142 lignes - Filtres de genre MultiSelectChips.vue - 168 lignes - Sélection multiple générique TableNavigationControls.vue - 156 lignes - Navigation de tableau Organisms (1 nouveau): EvaluationFiltersPanel.vue - 238 lignes - Panel de filtres complet Documentation: PHASE-1.3-MIGRATION.md - Guide complet de migration 📊 Résultats: ✅ 7 atomes créés (objectif 10+) ✅ 7 molécules créées (objectif 8+) ✅ 4 organisms créés (objectif 6+) ✅ 100% Tailwind CSS avec tokens Material Design ✅ Build réussi sans erreurs ✅ Tous les composants < 300 lignes (moyenne ~150) 🚀 Technologies utilisées: Architecture Atomique (Brad Frost) Tailwind CSS v4 avec tokens Material Design 3 TypeScript avec interfaces strictes Vue 3 Composition API (script setup) Material Design 3 (couleurs, spacing, typography, shadows)

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@lhci/cli": "^0.14.0",
     "@playwright/test": "^1.49.1",
     "@rushstack/eslint-patch": "^1.10.4",
+    "@tailwindcss/postcss": "^4.1.14",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.10.5",
     "@typescript-eslint/eslint-plugin": "^8.19.0",
@@ -41,12 +42,15 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.16.0",
     "eslint-plugin-vue": "^9.31.0",
     "jsdom": "^25.0.1",
     "lighthouse": "^12.2.1",
+    "postcss": "^8.5.6",
     "prettier": "^3.4.2",
     "puppeteer": "^24.21.0",
+    "tailwindcss": "^4.1.14",
     "terser": "^5.44.0",
     "typescript": "^5.7.2",
     "vite": "^6.0.3",
