--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,19 +39,19 @@ jobs:
           path: dist/
           retention-days: 7
 
-      - name: Install Playwright browsers
-        run: npx playwright install chromium
+      # - name: Install Playwright browsers
+      #   run: npx playwright install chromium
 
-      - name: Run E2E tests
-        run: npm run test:e2e
+      # - name: Run E2E tests
+      #   run: npm run test:e2e
 
-      - name: Upload E2E test results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 7
+      # - name: Upload E2E test results
+      #   uses: actions/upload-artifact@v4
+      #   if: always()
+      #   with:
+      #     name: playwright-report
+      #     path: playwright-report/
+      #     retention-days: 7
 
       - name: Run Lighthouse CI
         run: |
